SFDCProject/src/objects/Assignment_Order__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Criteria_2__c</fullName>
        <label>Assignment Criteria 2</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Assignment_Criteria__c</fullName>
        <label>Assignment Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Market Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Assignment</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_2__c</fullName>
        <label>Order 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order of execution</description>
        <label>Order</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Assignment Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Assignment Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>